k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        #/this is arbitrary but must match the pod we want to direct to
        component: postgres
    ports:
        #/port other pods would use
        -   port: 5432
        #/this is the targeted pod. does not need to change
            targetPort: 5432
