k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        #/this is arbitrary but must match the pod we want to direct to
        component: server
    ports:
        #/port other pods would use
        -   port: 5000
        #/this is the targeted pod
            targetPort: 5000
