k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress   
metadata:
    name: ingress-service
    annotations:
        #/this tells k8s to base controller on nginx
        kubernetes.io/ingress.class:    nginx
        #/this tells controller how to behave. in this case tells it to do a path rewrite
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        #/infomr ingress service that we are using letsencrypt as cert issuer
        certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
        #/force connections to use https
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    tls:
        -   hosts:
                -   sysdevops.infom
                -   www.sysdevops.info
            secretName: sysdevops.info
    rules:
        -   host:   sysdevops.info
        -   http:
                paths:
                    -   path:   /?(.*)
                        backend:
                            serviceName:    client-cluster-ip-service
                            servicePort:    3000
                    -   path:   /api/?(.*)
                        backend:
                            serviceName:    server-cluster-ip-service
                            servicePort:    5000
        -   host:   www.sysdevops.info
        -   http:
                paths:
                    -   path:   /?(.*)
                        backend:
                            serviceName:    client-cluster-ip-service
                            servicePort:    3000
                    -   path:   /api/?(.*)
                        backend:
                            serviceName:    server-cluster-ip-service
                            servicePort:    5000
